feat: add Dockerfile

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,7 @@ nav {
   transform: scale(0.9);
   transition: opacity 300ms, transform 300ms;
 }
+
+body.page-transition-active {
+  background-color: theme('colors.dark.0');
+}
